--- a/src/main/webapp/Join.html
+++ b/src/main/webapp/Join.html
@@ -5,9 +5,9 @@
 <title>Insert title here</title>
 </head>
 <body>
+	<h1>회원가입</h1>
 	<form action="JoinCon" method="post">
 	
-		<!--사용자마다 반 이름을 다르게 적을 수 있어서 통일하기 위해 select-->
 		<select name="cls">
 			<option value="Spring_A">Spring_A</option>
 			<option value="Spring_B">Spring_B</option>
