--- a/src/main/webapp/Join.html
+++ b/src/main/webapp/Join.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="EUC-KR">
+<meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
-	<h1>È¸¿ø°¡ÀÔ</h1>
+	<h1>íšŒì›ê°€ìž…</h1>
 	<form action="JoinCon" method="post">
 	
 		<select name="cls">
@@ -13,21 +13,21 @@
 			<option value="Spring_B">Spring_B</option>
 			<option value="JavaScript_A">JavaScript_A</option>
 			<option value="JavaScript_B">JavaScript_B</option>
-			<option value="App">AppÆ¯È­</option>
-			<option value="Visual_Itg">½Ã°¢Áö´É</option>
-			<option value="Object_Itg">»ç¹°Áö´É</option>
-			<option value="Language_Itg">¾ð¾îÁö´É</option>
+			<option value="App">AppíŠ¹í™”</option>
+			<option value="Visual_Itg">ì‹œê°ì§€ëŠ¥</option>
+			<option value="Object_Itg">ì‚¬ë¬¼ì§€ëŠ¥</option>
+			<option value="Language_Itg">ì–¸ì–´ì§€ëŠ¥</option>
 			<option value="Cloud_A">Cloud_A</option>
 			<option value="Cloud_B">Cloud_B</option>
 		</select> <br>
 		
-		¾ÆÀÌµð <input type="text" name="id"> <br>
-		ºñ¹Ð¹øÈ£ <input type="password" name="pw"> <br>
-		ÀÌ¸ÞÀÏ <input type="text" name="email"> <br>
-		ÀÌ¸§ <input type="text" name="name"> <br>
-		»ý³â¿ùÀÏ <input type="text" name="birth"> <br>
-		ÇÚµåÆù¹øÈ£ <input type="text" name="tel"> <br>
-		<input type="submit" value="È¸¿ø°¡ÀÔ">
+		ì•„ì´ë”” <input type="text" name="id"> <br>
+		ë¹„ë°€ë²ˆí˜¸ <input type="password" name="pw"> <br>
+		ì´ë©”ì¼ <input type="text" name="email"> <br>
+		ì´ë¦„ <input type="text" name="name"> <br>
+		ìƒë…„ì›”ì¼ <input type="text" name="birth"> <br>
+		í•¸ë“œí°ë²ˆí˜¸ <input type="text" name="tel"> <br>
+		<input type="submit" value="íšŒì›ê°€ìž…">
 		
 	</form>
 </body>
