--- a/src/main/webapp/Join.html
+++ b/src/main/webapp/Join.html
@@ -27,6 +27,10 @@
 		이름 <input type="text" name="name"> <br>
 		생년월일 <input type="text" name="birth"> <br>
 		핸드폰번호 <input type="text" name="tel"> <br>
+		<select name="m_type">
+			<option value="s">학생</option>
+			<option value="t">교사</option>
+		</select>
 		<input type="submit" value="회원가입">
 		
 	</form>
