--- a/src/main/webapp/Login.html
+++ b/src/main/webapp/Login.html
@@ -7,8 +7,8 @@
 <body>
 	<h1>로그인 페이지</h1>
 	<form action="LoginCon" method="post">
-		<input type="text" name="input_id"><br>
-		<input type="password" name="input_pw"><br>
+		<input type="text" name="id"><br>
+		<input type="password" name="pw"><br>
 		<input type="submit" value="로그인"><br>		
 	</form>
 </body>
