--- a/src/main/webapp/LoginF.html
+++ b/src/main/webapp/LoginF.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="EUC-KR">
+<meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
+
+	<!-- ìë°”ìŠ¤í¬ë¦½íŠ¸ ì‘ì„± êµ¬ê°„ -->
 	<script>
-		alert("ID³ª PW¸¦ È®ÀÎÇØÁÖ¼¼¿ä.");
+		alert('ë¡œê·¸ì¸ ì‹¤íŒ¨');
 		location.href = "Main.jsp";
 	</script>
+	
 </body>
 </html>
