--- a/src/main/webapp/Join.html
+++ b/src/main/webapp/Join.html
@@ -6,8 +6,11 @@
 </head>
 <body>
 	<h1>회원가입</h1>
+	
+	<!-- 사용자가 적은 cls,id,pw,email,name,birth,tel 값을 가지고 JoinCon으로 이동 -->
 	<form action="JoinCon" method="post">
 	
+		<!--사용자마다 반 이름을 다르게 적을 수 있어서 통일하기 위해 select-->
 		<select name="cls">
 			<option value="Spring_A">Spring_A</option>
 			<option value="Spring_B">Spring_B</option>
@@ -27,12 +30,9 @@
 		이름 <input type="text" name="name"> <br>
 		생년월일 <input type="text" name="birth"> <br>
 		핸드폰번호 <input type="text" name="tel"> <br>
-		<select name="m_type">
-			<option value="s">학생</option>
-			<option value="t">교사</option>
-		</select>
 		<input type="submit" value="회원가입">
 		
 	</form>
+	
 </body>
 </html>
