--- a/src/main/webapp/Login.html
+++ b/src/main/webapp/Login.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="EUC-KR">
+<meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
-	<h1>·Î±×ÀÎ ÆäÀÌÁö</h1>
+	<h3>ë¡œê·¸ì¸ í˜ì´ì§€</h3>
+	
+	<!-- LoginConìœ¼ë¡œ id,pwë¥¼ ë³´ë‚´ì¤€ë‹¤ -->
 	<form action="LoginCon" method="post">
-		<input type="text" name="id"><br>
-		<input type="password" name="pw"><br>
-		<input type="submit" value="·Î±×ÀÎ"><br>		
+		<input type="text" name="id"> <br>
+		<input type="password" name="pw"> <br>
+		<input type="submit" value="ë¡œê·¸ì¸">
 	</form>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
